<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="onlyNewest">
        UUSIN VERSIO!\n\n
        <u><b>TÄRKEÄÄ!</b></u>\n
        Päivityksen jälkeen tärkeää tarkistaa hälytysääni ja äänenvoimakkuus.\n\n

        <u><b>Versio 3.81\n\n</b></u>

        Android 11 korjaus:\n\n

        Karttapainikkeen avautuminen korjattu.\n
        Tallennustilan lupa pyydetään ennen kuin asetukset sivulle pääsee.\n\n

        <u><b>Versio 3.8</b></u>\n\n

        Asemataulu käytössä Tokevan pikakäynnistys lisätty, aukeaa nettiselaimeen.\n\n

        Pikailmoitusten vastausvaihtoehtoihin lisätty mahdollisuus lähettää valitsemallaan sovelluksella ilmoittautumisviestit. Esim. Signal tai Telegram.\n\n

        Korjattu: äänienhallinta hälytyksen tullessa saattoi jättää sovelluksen äänettömälle tai värinälle riippuen missä tilassa puhelin oli ennen hälytystä.\n\n

        Ääniasetuksiin lisätty värinäkuviot:\n
        - Pulse\n
        - Hurry\n
        - PiiPaa\n
        - SOS\n
        - VIRVE\n\n

        + muita pieniä korjauksia\n\n

        <u><b>Versio 3.7</b></u>\n\n
        Android 10 korjaus:\n
        Automaattinen aikaisu ei toimi ilman taustalta toimivan aukaisun lupaa. Luvan voi antaa asetuksista Akun optimointi asetuksen alapuolelta.\n\n
    </string>
    <string name="second">Osoitehaku</string>
    <string name="soita_lahto">Lähtöilmoitus</string>
    <string name="allefive">Alle 5</string>
    <string name="alleten">Alle 10</string>
    <string name="plusten">Yli 10</string>
    <string name="settings_summary">Valitse hälytyksen äänenvoimakkuus</string>
    <string name="pref_title_ringtone">Hälytysääni</string>
    <string name="palaute">Lähetä palautetta</string>
    <string name="avaa_kartta">Avaa kartta</string>
    <string name="tunnus">Tunnus</string>
    <string name="luokka">Osoite</string>
    <string name="tallenna">Tallenna</string>
    <string name="ringtoneSummary">Ringtone: %s</string>
    <string name="tallenna_arkistoon">Tallenna hälytys arkistoon</string>
    <string name="tyhjenna_tietokanta">Tyhjennä arkisto</string>
    <string name="testi">Testaa hälytys</string>
    <string name="hiljenna">Hälytykset äänetön/äänet</string>
    <string name="vpk_apuri">VPK APURI</string>
    <string name="kultala_aki">Kultala Aki</string>
    <string name="postiosoite">kultalaaki@gmail.com</string>
    <string name="kirjoita_h_lytys_viesti">Kirjoita hälytys viesti</string>
    <string name="syota_osoite">Syötä osoite</string>
    <string name="syotahaltunnus">Syötä hälytys tunnus</string>
    <string name="title_activity_changelog">Muutosloki</string>
    <string name="t_h_n_tulee_tunnus">Tähän tulee tunnus</string>
    <string name="h_lytysviestin_kentt">Hälytysviestin kenttä.</string>
    <string name="tekij">Tekijä:</string>
    <string name="tallenna_tietokanta">Tallenna tietokanta</string>
    <string name="logo">Logo</string>
    <string name="hiljenna_h_lytys">Hiljenna hälytys</string>
    <string name="settings_dialog_message">Valitse hälytyksen äänenvoimakkuus</string>
    <string name="settings_unit">%</string>
    <string name="settings_title">Äänenvoimakkuus</string>
    <string name="viesti">Viesti</string>
    <string name="ajastin">Ajastin</string>
</resources>