<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Kultala Aki on 23.1.2018 9:14
  ~ Copyright (c) 2018. All rights reserved.
  ~
  ~ Last modified 23.1.2018 9:14
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:auto="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="Ääniasetukset"
        android:key="pref_key_viestiaani">
        <Preference
            android:summary="Hälytysäänen valinta on myös puheluilla tuleviin hälytyksiin. Hälytysäänen kesto on vähintään 10 sekuntia."
            android:selectable="false"/>
        <Preference
            android:key="DoNotDisturb"
            android:icon="@drawable/ic_keyboard_arrow_right_white_24dp"
            android:title="Hälytysäänen muuttaminen: Do Not Disturb"
            android:summary="Ilman Do Not Disturb lupaa sovellus ei voi säädellä äänikanavia hälytyksen tullessa.
            Tämän avulla vaimennetaan soittoääni/viestiääni jotta sovelluksesta asetettu hälytysääni pääsee soimaan. ILMAN TÄTÄ LUPAA SOVELLUS EI PYSTY HÄLYTTÄMÄÄN." />
        <kultalaaki.vpkapuri.ExtraRingtonePreference
            android:key="ringtone"
            android:icon="@drawable/ic_keyboard_arrow_right_white_24dp"
            android:title="@string/pref_title_ringtone"
            android:summary="@string/ringtoneSummary"
            android:defaultValue="content://settings/system/notification_sound"
            auto:ringtoneType="all"
            auto:showSilent="false"
            auto:showDefault="false"
            auto:extraRingtones="@array/extraRingtones"
            auto:extraRingtoneTitles="@array/extraRingtoneTitles"/>
        <EditTextPreference
            android:key="stopTime"
            android:icon="@drawable/ic_keyboard_arrow_right_white_24dp"
            android:title="Hälytysäänen kesto sekunteissa"
            android:defaultValue="60"
            android:maxLength="5"
            android:inputType="number"
            android:summary="Laita aika sekunteina. Äänen kesto on vähintään aina 10 sekuntia." />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="Hälytysäänen voimakkuus ja värinä"
        android:key="pref_key_voimakkuus">
        <kultalaaki.vpkapuri.SeekBarPreference
            android:defaultValue="50"
            android:dialogMessage="@string/settings_dialog_message"
            android:key="SEEKBAR_VALUE"
            android:max="100"
            android:summary="@string/settings_summary"
            android:text="@string/settings_unit"
            android:title="@string/settings_title"
            android:icon="@drawable/ic_keyboard_arrow_right_white_24dp"/>
        <SwitchPreference
            android:key="varina"
            android:title="Värinä"
            android:defaultValue="true"
            android:summary="Käytetäänkö hälytyksen tullessa värinää."/>
        <SwitchPreference
            android:key="aanetVaiEi"
            android:title="Äänettömän läpi"
            android:defaultValue="false"
            android:summary="Laita tämä päälle jos haluat että hälytykset eivät tule äänettömän läpi."/>
        <SwitchPreference
            android:key="puhelu"
            android:title="Puhelu hälytys"
            android:defaultValue="false"
            android:summary="Laita tämä päälle jos haluat käyttää sovelluksen ääniasetuksia myös puhelu hälytyksille. Muista myös Do Not Disturb asetus." />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="Teksti puheeksi"
        android:key="pref_teksti_puheeksi">
        <SwitchPreference
            android:key="koneluku"
            android:title="Teksti puheeksi"
            android:defaultValue="false"
            android:summary="Hälytysviesti puhutaan automaattisesti kun hälytys sivu aukaistaan ilmoituksen kautta tai kun hiljennetään jos automaattinen aukaisu käytössä."/>
        <kultalaaki.vpkapuri.SeekBarPreference
            android:defaultValue="50"
            android:dialogMessage="Teksti puheeksi äänenvoimakkuus"
            android:key="tekstiPuheeksiVol"
            android:max="100"
            android:summary="Teksti puheeksi äänenvoimakkuus"
            android:text="@string/settings_unit"
            android:title="Teksti puheeksi voimakkuus"
            android:icon="@drawable/ic_keyboard_arrow_right_white_24dp" />
    </PreferenceCategory>

</PreferenceScreen>